--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ selenium.log
 tests/_output
 tests/RoboFile.ini
 selenium-server-standalone.jar
+selenium-server-standalone-3.6.0.jar
 tests/_support/_generated/*
 
 # Never ignore
