--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,4 @@ before_script:
   - bash ci/docker_install.sh > /dev/null
 job:
   script:
-  - .\vendor\bin\codecept run tests\acceptance\pl\initPLCest.php --steps
+  - vendor/bin/codecept run tests/acceptance/pl/initPLCest.php --steps
