--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ codecept.phar
 selenium.log
 tests/_output
 tests/RoboFile.ini
-*.jar
+selenium-server-standalone-3.6.0.jar
 tests/_support/_generated/*
 
 # Never ignore
