--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,6 @@ install:
   - nvm use 8
 php:
   - 7.1.9
-addons:
-  firefox: "46.0"
 cache:
   apt: true
   directories:
@@ -23,11 +21,7 @@ matrix:
 
 before_script:
   - "export DISPLAY=:99.0"
-  - $HOME/.travis/setup.sh
+  - .travis/setup.sh
 
 script:
-  - $HOME/.travis/script.sh
-
-notifications:
-  slack:
-    secure: XX4m+uA8suXodJS0SvLDqrWovNvx7bxiJwyebj3gA8JwSP2E3XsRJFxsAt5++GTOv1nmMCGIkXnovY44XoA8ErEVSseElCUtKOr3/sa6tCPDYl4Lz+Q4FxPxPJcz6glpwXyOc2tCMNaKWiFdWrDsHNucPjw9iN5N16+jIvYwrrQ=
+  - .travis/script.sh
