--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,11 @@ matrix:
 
 before_script:
   - "export DISPLAY=:99.0"
+  - sudo add-apt-repository ppa:webupd8team/java
   - sudo apt-get update
-  - sudo apt-get install openjdk-8-jre
+  - java -version
+  - sudo apt-get install oracle-java8-installer
+  - sudo apt-get install oracle-java8-set-default
   - java -version
   - composer install
 
