--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 sudo: required
-dist: trusty
+dist: precise
 addons: # get google-chrome-stable
   chrome: stable
 install:
@@ -30,14 +30,38 @@ matrix:
 before_script:
   - "export DISPLAY=:99.0"
   - sudo apt-get update
-  - java -version
-  - sudo apt-get install oracle-java8-installer
-  - sudo apt-get install oracle-java8-set-default
-  - java -version
-  - composer install
-  - jdk_switcher use oraclejdk8
+  - # forcing localhost to be the 1st alias of 127.0.0.1 in /etc/hosts (https://github.com/seleniumhq/selenium/issues/2074)
+  - sudo sed -i '1s/^/127.0.0.1 localhost\n/' /etc/hosts
+  - sudo apt-get update -qq
+    - sudo apt-get install --yes --force-yes apache2 libapache2-mod-fastcgi
+    - sudo mkdir $(pwd)/.run
+  - phpversionname="$(phpenv version-name)"
+  - file="/home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.conf"
+  - cp /home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.conf.default /home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.conf
+  - if [ -f /home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.d/www.conf.default ]; then
+    - cp /home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.d/www.conf.default /home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.d/www.conf
+    - file=/home/$USER/.phpenv/versions/$phpversionname/etc/php-fpm.d/www.conf
+  - fi;
+  - sed -e "s,listen = 127.0.0.1:9000,listen = /tmp/php${phpversionname:0:1}-fpm.sock,g" --in-place $file
+  - sed -e "s,;listen.owner = nobody,listen.owner = $USER,g" --in-place $file
+  - sed -e "s,;listen.group = nobody,listen.group = $USER,g" --in-place $file
+  - sed -e "s,;listen.mode = 0660,listen.mode = 0666,g" --in-place $file
+  - sed -e "s,user = nobody,;user = $USER,g" --in-place $file
+  - sed -e "s,group = nobody,;group = $USER,g" --in-place $file
+  - sudo a2enmod rewrite actions fastcgi alias
+  - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$phpversionname/etc/php.ini
+  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+  - sudo cp -f ./tests/travis-ci-apache.conf /etc/apache2/sites-available/default.conf
+  - sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default.conf
+  - sudo sed -e "s?%PHPVERSION%?${TRAVIS_PHP_VERSION:0:1}?g" --in-place /etc/apache2/sites-available/default.conf
+  - sudo a2ensite default.conf
+  - sudo service apache2 restart
+
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - sudo apt-get install fluxbox -y --force-yes
+  - fluxbox &
+  - sleep 3
 
 script:
-  - whereis google-chrome-stable
-  - whereis chromedriver
   - vendor/bin/codecept run tests/acceptance/pl/initPLCest.php --steps
