--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
 
 before_script:
   - chmod +x ./ci/setup.sh
+  - ./ci/setup.sh
 
 script:
   - chmod +x ./ci/script.sh
+  - ./ci/script.sh
