--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,12 @@ matrix:
 before_script:
   - chmod +x ./ci/setup.sh
   - ./ci/setup.sh
+  - wget http://chromedriver.storage.googleapis.com/2.10/chromedriver_linux64.zip
+  - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.9/
+  - export CHROME_BIN=chromium-browser
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
 
 script:
   - chmod +x ./ci/script.sh
