--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: php
 sudo: required
-dist: precise
-addons: # get google-chrome-stable
-  chrome: stable
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
