--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,10 @@ matrix:
 before_script:
   - chmod +x ./ci/setup.sh
   - ./ci/setup.sh
-  - google-chrome-beta --headless --no-sandbox
+  - export DISPLAY=:99.0
+  - sudo sh -e /etc/init.d/xvfb start
+  - npm i -g npm@^3
+  - sleep 3
 
 script:
   - chmod +x ./ci/script.sh
