--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,7 @@ language: php
 sudo: required
 dist: trusty
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
@@ -34,10 +30,7 @@ matrix:
 before_script:
   - chmod +x ./ci/setup.sh
   - ./ci/setup.sh
-  - export DISPLAY=:99.0
-  - sudo sh -e /etc/init.d/xvfb start
-  - npm i -g npm@^3
-  - sleep 3
+  - export DISPLAY=:99.0 && sh -e /etc/init.d/xvfb start && sleep 3
 
 script:
   - chmod +x ./ci/script.sh
