--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: php
 sudo: required
 dist: trusty
 addons:
-  chrome: stable
+  firefox: lastest
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
