--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: php
 sudo: required
 dist: trusty
 addons:
-  chrome: stable
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  firefox: latest
+apt:
+    sources:
+     - google-chrome
+    packages:
+     - google-chrome-stable fluxbox
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
