--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,9 @@ language: php
 sudo: required
 dist: trusty
 addons:
-  firefox: latest
-apt:
-    sources:
-     - google-chrome
-    packages:
-     - google-chrome-stable fluxbox
+  chrome: stable
+before_install:
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
