--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "codeception/codeception": "*",
         "fzaninotto/faker": "~1",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "consolidation/robo": "~1"
     }
 }
