--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: php
 sudo: required
 dist: trusty
 addons:
-  chrome: stable
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  firefox: lastest
 install:
   - . $HOME/.nvm/nvm.sh
   - nvm install 8
