--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ bower_components/
 # Test related files
 codecept.phar
 selenium.log
+PCB/*
 tests/_output
 tests/RoboFile.ini
 selenium-server-standalone-3.6.0.jar
